--- a/angular.html
+++ b/angular.html
@@ -23,7 +23,7 @@
                 <input ng-model="user.name">
                 <h3 id="user-greeting">My name is , {{ user.name }}</h3>
                 <input ng-model="user.github">
-                <p id="user-github">My Github is , {{ user.github }} .</p>
+                <p id="user-github">My Github name is , {{ user.github }} .</p>
                 <input ng-model="user.skills">
                 <p id="user-skills">My Skills are , {{ user.skills }}.</p>
                 <input ng-model="user.app">
